--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 /* Header avec le logo */
 header {
-    background-color: #ffdd57;
+    background-color: #E6F7FF;
     padding: 15px;
     text-align: center;
 }
